Fix vertical align of input icon for smartphone

--- a/public/scss/app.scss
+++ b/public/scss/app.scss
@@ -118,7 +118,7 @@ h1 {
         padding: 0;
         text-align: center;
         z-index: 12;
-        top: 52%; // I don't know why addition 2% is needed.
+        top: 54%; // I don't know why addition 4% is needed.
         -webkit-transition-duration: 0.5s;
         transition-duration: 0.5s;
         &.initial {
